Fix navbar jump issue

--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@ body {
   padding-top: 40px;
 }
 section {
-  padding-top: 10px;
+  padding-top: 30px;
 }
 a {
   color: inherit;
